--- a/MODUL1 RASYID/product.html
+++ b/MODUL1 RASYID/product.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="profile.html">Profile </a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="products.html">Products <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="product.html">Products <span class="sr-only">(current)</span></a>
                     </li>
 
                 </ul>
