--- a/MODUL1 RASYID/profile.html
+++ b/MODUL1 RASYID/profile.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="profile.html">Profile <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
+                        <a class="nav-link" href="product.html">Products</a>
                     </li>
 
                 </ul>
