--- a/MODUL1 RASYID/home.html
+++ b/MODUL1 RASYID/home.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Bootstrap CSS -->
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -23,11 +24,11 @@
     <title>Home</title>
 </head>
 
-<body class="bg-light">
+<body >
     <section id="nav-bar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3fcfd">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd">
             <a class="navbar-brand" href="#">
-                <img src="logo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
+                <img src="loggo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -35,7 +36,7 @@
                         <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="profiile.html">Profile</a>
+                        <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="product.html">Products</a>
