--- a/MODUL1 RASYID/profile.html
+++ b/MODUL1 RASYID/profile.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Bootstrap CSS -->
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -27,7 +28,7 @@
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd">
             <a class="navbar-brand" href="#">
-                <img src="logo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
+                <img src="loggo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -49,7 +50,7 @@
         <div class="container-card">
             <div class="card mt-5" style="width: 40rem; margin: auto;">
                 <div class="card-img-top" style="background-color:whitesmoke;text-align: center;">
-                    <img src="logo-ead.png" class="mt-3 mb-3" alt="logo" style="width: 60%;">
+                    <img src="loggo-ead.png" class="mt-3 mb-3" alt="logo" style="width: 60%;">
                 </div>
             </div>
         </div>
