--- a/MODUL1 RASYID/product.html
+++ b/MODUL1 RASYID/product.html
@@ -28,7 +28,7 @@
     <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd">
             <a class="navbar-brand" href="#">
-                <img src="logo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
+                <img src="loggo-ead.png" width="190" height="50" alt="" loading="lazy" /></a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -61,7 +61,7 @@
                 <th>Harga</th>
                 </tr>
                 <tr>
-                    <td rowspan="3">Ready Stock</td>
+                    <td rowspan="5">Ready Stock</td>
                     <td>All-in-One 24 f0051d [3JV73AA] </td>
                     <td>HP</td>
                     <td>Komputer</td>
